--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "json-server": "^1.0.0-beta.3",
     "pinia": "^3.0.4",
     "vue": "^3.5.25",
