--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "node": "^20.19.0 || >=22.12.0"
   },
   "scripts": {
-    "dev": "vite",
+    "dev": "npm-run-all --parallel server vite",
+    "vite": "vite",
+    "server": "json-server --watch data.json --port 3000",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
@@ -17,7 +19,6 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
-    "json-server": "^1.0.0-beta.3",
     "pinia": "^3.0.4",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
@@ -32,6 +33,8 @@
     "eslint": "^9.39.1",
     "eslint-plugin-vue": "~10.5.1",
     "jiti": "^2.6.1",
+    "json-server": "^1.0.0-beta.3",
+    "npm-run-all": "^4.1.5",
     "npm-run-all2": "^8.0.4",
     "prettier": "3.6.2",
     "typescript": "~5.9.0",
